--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-						<a class="nav-link link text-white text-primary display-4" href="About.html">About</a>
+						<a class="nav-link link text-white text-primary display-4" href="about.html">About</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link link text-white text-primary display-4" href="services.html" aria-expanded="false" target="_blank">Portfolio &amp; Services</a>
