--- a/page4.html
+++ b/page4.html
@@ -155,7 +155,7 @@
     </div>
   </div>
 </section>
-
+<!------
 <section data-bs-version="5.1" class="news08 cid-uWXVAHMV6c" id="news08-1u">
   
   
@@ -228,7 +228,7 @@
 
     </div>
   </div>
-</section>
+</section>----->
 
 <section data-bs-version="5.1" class="form5 cid-uWXUZG3eLF" id="form02-1r">
     
