--- a/about.html
+++ b/about.html
@@ -217,7 +217,7 @@
 	<div class="container-fluid">
 		<div class="row justify-content-center">
 			<div class="col-12 col-md-12 col-lg-4 image-wrapper">
-				<img class="w-100" src="assets/images/gallery03.webp" alt="Mobirise Website Builder">
+				<img class="w-100" src="assets/images/pro20pic201-334x337.webp" alt="Tafadzwa Daniel Kamanga">
 			</div>
 			<div class="col-12 col-md-12 col-lg">
 				<div class="text-wrapper align-left">
