--- a/about.html
+++ b/about.html
@@ -336,6 +336,124 @@
             </div>
         </div>
     </div>
+	<!----------CHATBOT--------------------->
+    <!-- WhatsApp Chatbot Widget for TaffyDevs -->
+<div id="taffydevs-chatbot">
+  <div id="chatbot-button">💬 Chat with us</div>
+  <div id="chatbot-window" style="display:none;">
+    <h4>Welcome to TaffyDevs!</h4>
+    <p>Hi there! Please tell us your name below so we can personalize your chat.</p>
+    <form id="clientForm">
+      <input type="text" id="clientName" placeholder="Enter your name" required>
+      <button type="submit">Start Chat</button>
+    </form>
+    <a id="whatsappLink" href="#" target="_blank" style="display:none;">
+      Message on WhatsApp
+    </a>
+  </div>
+</div>
+
+<style>
+#taffydevs-chatbot {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 9999;
+  font-family: 'Poppins', sans-serif;
+}
+
+#chatbot-button {
+  background-color: #25D366;
+  color: #fff;
+  border-radius: 50px;
+  padding: 12px 20px;
+  cursor: pointer;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+  transition: all 0.3s ease;
+}
+
+#chatbot-button:hover {
+  background-color: #20b856;
+}
+
+#chatbot-window {
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+  padding: 15px;
+  width: 250px;
+  margin-bottom: 10px;
+}
+
+#clientForm input {
+  width: 100%;
+  padding: 8px;
+  margin-top: 8px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+#clientForm button {
+  background-color: #25D366;
+  color: #fff;
+  border: none;
+  padding: 8px 15px;
+  margin-top: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  width: 100%;
+}
+
+#clientForm button:hover {
+  background-color: #20b856;
+}
+</style>
+
+<script>
+// WhatsApp chatbot logic
+const phoneNumber = '48782778223'; // Replace with your WhatsApp number (no +)
+const chatbotButton = document.getElementById('chatbot-button');
+const chatbotWindow = document.getElementById('chatbot-window');
+const form = document.getElementById('clientForm');
+const whatsappLink = document.getElementById('whatsappLink');
+const nameInput = document.getElementById('clientName');
+
+// Load stored name if available
+window.addEventListener('load', () => {
+  const storedName = localStorage.getItem('clientName');
+  if (storedName) {
+    nameInput.value = storedName;
+  }
+});
+
+chatbotButton.addEventListener('click', () => {
+  chatbotWindow.style.display = chatbotWindow.style.display === 'none' ? 'block' : 'none';
+});
+
+form.addEventListener('submit', (e) => {
+  e.preventDefault();
+  const name = nameInput.value.trim();
+  if (!name) return;
+  localStorage.setItem('clientName', name); // Save name locally
+  const message = encodeURIComponent(`Hello, my name is ${name}. I’d like to know more about your web development services.`);
+  const link = `https://wa.me/${phoneNumber}?text=${message}`;
+  whatsappLink.href = link;
+  whatsappLink.style.display = 'inline-block';
+  form.style.display = 'none';
+});
+
+// Google Analytics Event Tracking
+whatsappLink?.addEventListener('click', () => {
+  if (typeof gtag === 'function') {
+    gtag('event', 'whatsapp_click', {
+      'event_category': 'Engagement',
+      'event_label': 'TaffyDevs Chatbot Click',
+      'value': 1
+    });
+  }
+});
+</script>
+<!---------End of chatbot--------->
 </section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="#" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-maker.html">AI Website Maker</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
