--- a/services.html
+++ b/services.html
@@ -64,7 +64,7 @@
 						<a class="nav-link link text-white text-primary display-4" href="services.html" aria-expanded="false" target="_blank">Portfolio &amp; Services</a>
 					</li><li class="nav-item">
 						<a class="nav-link link text-white text-primary display-4" href="contact.html">Contacts</a>
-					</li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="page4.html" target="_blank">Blog</a></li></ul>
+					</li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="blog.html" target="_blank">Blog</a></li></ul>
 				
 				<div class="navbar-buttons mbr-section-btn"><a class="btn btn-warning display-4" href="https://forms.gle/otm4qgBMWktyWVRWA" target="_blank"> Order Now!</a></div>
 			</div>
@@ -629,7 +629,7 @@
 
 <script>
 // WhatsApp chatbot logic
-const phoneNumber = '48782778223'; // Replace with your WhatsApp number (no +)
+const phoneNumber = '48600762551'; // Replace with your WhatsApp number (no +)
 const chatbotButton = document.getElementById('chatbot-button');
 const chatbotWindow = document.getElementById('chatbot-window');
 const form = document.getElementById('clientForm');
